Add Float Label Form Interaction

--- a/patterns.html
+++ b/patterns.html
@@ -179,6 +179,7 @@
 						<li><a href="http://codepen.io/chriscoyier/full/DmnlJ">Form with Left Labels</a></li>
 						<li><a href="http://codepen.io/bradfrost/full/EvmuH">Fluid Search Form</a></li>
 						<li><a href="http://codepen.io/chriscoyier/full/egHJh">Search with Filters</a></li>
+						<li><a href="http://codepen.io/simonpioli/full/LhsIi">Float Label Form Interaction</a></li>
 						<li><a href="#" class="inactive">Login Form</a></li>
 					</ul>
 				</section>
@@ -239,7 +240,7 @@
 			</div>
 		</footer>
 	</div>
-	
+
 	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
