Add better placeholders

--- a/patterns.html
+++ b/patterns.html
@@ -180,6 +180,7 @@
 						<li><a href="http://codepen.io/bradfrost/full/EvmuH">Fluid Search Form</a></li>
 						<li><a href="http://codepen.io/chriscoyier/full/egHJh">Search with Filters</a></li>
 						<li><a href="http://codepen.io/simonpioli/full/LhsIi">Float Label Form Interaction</a></li>
+						<li><a href="http://dmackerman.github.io/angular-better-placeholders/#/">Better Placeholders for Bootstrap &amp; Angular JS</a></li>
 						<li><a href="#" class="inactive">Login Form</a></li>
 					</ul>
 				</section>
